# crankshaft-core

./: CMakeLists.txt  README.md  build.sh
.github/workflows/: ci.yml  codspeed.yml
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
src/: CMakeLists.txt  CoreApplicationRunner.cpp  CoreApplicationRunner.h  main.cpp
src/benchmarks/: CMakeLists.txt  bench_core.cpp
src/cmake/: CrankshaftAasdk.cmake
src/config/: crankshaft.json
src/hal/functional/: BluetoothManagerImpl.cpp  BluetoothManagerImpl.h  CANDevice.h  NetworkServiceImpl.cpp  WiFiManagerImpl.cpp  WiFiManagerImpl.h
src/hal/multimedia/: AudioHAL.h  AudioMixer.cpp  AudioMixer.h  GStreamerVideoDecoder.cpp  GStreamerVideoDecoder.h  MediaPipeline.h  VideoHAL.h
src/hal/transport/: UARTTransport.cpp  UARTTransport.h
src/hal/wireless/: BluetoothHAL.cpp  BluetoothHAL.h  BluetoothManager.cpp  NetworkService.cpp  NetworkService.h  WiFiHAL.cpp  WiFiHAL.h  WiFiManager.cpp  WiFiManager.h
src/packaging/core/: crankshaft-core.service  postinst  prerm
src/packaging/core/scripts/: aa_discovery_trigger.sh
src/packaging/core/udev/: 99-crankshaft.rules
src/services/android_auto/: AndroidAutoService.cpp  AndroidAutoService.h  CMakeLists.txt  IWirelessNetworkManager.h  ProtocolHelpers.cpp  ProtocolHelpers.h  RealAndroidAutoService.cpp  RealAndroidAutoService.h  WiFiManagerWirelessNetworkManager.cpp  WiFiManagerWirelessNetworkManager.h
src/services/audio/: AudioRouter.cpp  AudioRouter.h
src/services/bluetooth/: BluetoothService.cpp  BluetoothService.h
src/services/config/: ConfigService.cpp  ConfigService.h
src/services/diagnostics/: DiagnosticsEndpoint.h  MetricsEndpoint.h
src/services/driving_mode/: DrivingModeService.h
src/services/eventbus/: EventBus.cpp  EventBus.h
src/services/logging/: Logger.cpp  Logger.h
src/services/media/: MediaService.h
src/services/preferences/: PreferencesService.cpp  PreferencesService.h
src/services/profile/: ProfileManager.cpp  ProfileManager.h
src/services/service_manager/: ServiceManager.cpp  ServiceManager.h
src/services/session/: SessionStore.cpp  SessionStore.h
src/services/websocket/: WebSocketServer.cpp  WebSocketServer.h
src/tests/: CMakeLists.txt  test_logger.cpp
